examples/v1.0.0/commons/explain/ts/invalid/explain.receipt.invalid.2.ts
// INVALID explain.receipt #2 — missing result when status=success

export const explainReceiptInvalid2: any = {
  x402: {
    verb: "explain",
    version: "1.0.0",
    request_id: "req-explain-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-explain-0005"
  },
  status: "success"
};
